--- a/FE/electric_store/src/index.css
+++ b/FE/electric_store/src/index.css
@@ -11,11 +11,11 @@ h4,
 h5,
 h6 {
   font-family: 'Times New Roman', Times, serif;
-  letter-spacing: 1px;
+  margin: 0;
 }
 
-p,a{
+p,a,span{
   font-family: 'Times New Roman', Times, serif;
-  font-size: large;
+  font-size: larger;
   margin: 0;
 }
