--- a/FE/electric_store/src/App.css
+++ b/FE/electric_store/src/App.css
@@ -3,7 +3,9 @@
   margin: 0 auto;
 }
 
-.ant-btn {
-  background-color: orange;
-}
 
+.ant-btn:hover {
+  color: black !important;
+  background-color: rgb(147 96 20 / 54%) !important;
+  border: 1px solid rgba(238, 146, 9, 0.54) !important;
+}
