--- a/FE/electric_store/src/index.css
+++ b/FE/electric_store/src/index.css
@@ -10,12 +10,20 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Times New Roman', Times, serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: 0;
 }
 
-p,a,span{
-  font-family: 'Times New Roman', Times, serif;
-  font-size: larger;
+p,
+a,
+span {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: medium;
   margin: 0;
+}
+
+
+.ant-btn {
+  background-color: rgb(199 141 55 / 54%);
+
 }
