--- a/FE/electric_store/src/shared/layout/header/header.scss
+++ b/FE/electric_store/src/shared/layout/header/header.scss
@@ -6,6 +6,7 @@
     color: white;
     font-size: 18px;
     box-sizing: border-box;
+    border-right: 3px solid rgba(0,0,0,0.1);
 
     a{
         display: inline-block;
