--- a/FE/electric_store/src/entities/product-detail/productdetail.scss
+++ b/FE/electric_store/src/entities/product-detail/productdetail.scss
@@ -2,7 +2,7 @@
     border: none;
     border-radius: 30px 0px 0px 30px;
     padding: 5px 14px;
-    background-color: rgba(0,0,0,0.09);
+    background-color: rgba(0, 0, 0, 0.09);
     font-size: large;
 }
 
@@ -11,6 +11,20 @@
     border: none;
     border-radius: 0px 30px 30px 0px;
     padding: 5px 14px;
-    background-color: rgba(0,0,0,0.09);
+    background-color: rgba(0, 0, 0, 0.09);
     font-size: large;
+}
+
+
+.addingtocart {
+    &:hover {   
+        color: white !important;
+        background-color: rgb(203, 150, 28) !important;
+    }
+}
+.buydirectly {
+    &:hover {   
+        color: white !important;
+        background-color: rgb(165, 37, 37) !important;
+    }
 }
